--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <div id="last-updated" class="update-badge">Live Data...</div>
             <div class="share-container">
     <span>Share Map:</span>
-    <a href="https://www.facebook.com/sharer/sharer.php?u=https://map.yourdomain.com" target="_blank" class="share-btn fb">Facebook</a>
-    <a href="https://twitter.com/intent/tweet?text=Check out our live progress on the LifeWise Map!&url=https://map.yourdomain.com" target="_blank" class="share-btn tw">X (Twitter)</a>
+    <a href="https://www.facebook.com/sharer/sharer.php?u=http://map.seculareducationassociation.org/" target="_blank" class="share-btn fb">Facebook</a>
+    <a href="https://twitter.com/intent/tweet?text=Protect your community from Christian Nationalism with Secular Education Association's LifeWise Program Map!&url=http://map.seculareducationassociation.org/" target="_blank" class="share-btn tw">X (Twitter)</a>
 </div>
         </div>
     </div>
@@ -224,4 +224,5 @@
 </script>
 </body>
 </html>
+
 
