--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 <meta property="og:description" content="Tracking community infiltration and program maturity in real-time.">
 <meta property="og:image" content="https://lh3.googleusercontent.com/d/1dACXmZYFekAADTN5peF2Z6KxXRelDvv1"> 
 <meta property="og:url" content="https://map.seculareducationassociation.org">
+<meta property="og:image" content="http://map.seculareducationassociation.org/mapshot.jpgg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="http://map.seculareducationassociation.org/mapshot.jpg">
 </head>
 <body>
 
@@ -224,5 +229,6 @@
 </script>
 </body>
 </html>
+
 
 
