--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <img src="https://lh3.googleusercontent.com/d/1dACXmZYFekAADTN5peF2Z6KxXRelDvv1" alt="SEA Logo" class="company-logo">
         </a>
         <div class="sidebar-intro">
-            <p>The SEA LifeWise Program Map tracks implementation across school districts nationwide. Stay informed and protect your community.</p>
+            <p>SEA's LifeWise Program Map tracks LifeWise's implementation process in school districts all across the country. LifeWise developed an 11 step launch process with a stated goal of bringing their plug-and-play religious instruction franchise into every one of our nation's public schools. Find your district, stay informed and protect your community from the invasion of Christian Nationalism.</p>
             <a href="https://seculareducationassociation.org/lifewise-launch-process/" target="_blank" class="info-link">What Do These Steps Mean?</a>
             <div id="last-updated" class="update-badge">● Live Data...</div>
             <div class="share-container">
