--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     
     <meta name="description" content="Secular Education Association LifeWise Academy Map. View program progress, signature counts, and district status across the USA.">
-    <meta name="keywords" content="LifeWise, LifeWise map, Secular Education Association, SEA, signature tracking, Christian Nationalism">
+    <meta name="keywords" content="LifeWise, LifeWise map, LifeWise status, district status, Secular Education Association, SEA, signature tracking, Christian Nationalism">
 
     <meta property="og:title" content="LifeWise Program Map">
     <meta property="og:description" content="Tracking community implementation and program maturity in real-time.">
     <meta property="og:url" content="http://map.seculareducationassociation.org">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://map.seculareducationassociation.org/mapshot.jpg">
+    <meta property="og:image" content="http://map.seculareducationassociation.org/map_preview.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="LifeWise Program Map">
-    <meta name="twitter:image" content="http://map.seculareducationassociation.org/mapshot.jpg">
+    <meta name="twitter:image" content="http://map.seculareducationassociation.org/map_preview.png">
 
     <style>
         body { margin: 0; font-family: 'Segoe UI', Tahoma, sans-serif; display: flex; height: 100vh; overflow: hidden; width: 100vw; }
