--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
         <div class="sidebar-intro">
             <p>SEA's Map tracks LifeWise's implementation process in school districts all across the country. LifeWise developed a launch process with a stated goal of bringing their plug-and-play religious instruction franchise into every public school. Find your district, stay informed and protect your community from the invasion of Christian Nationalism.</p>
             
+            <a href="https://docs.google.com/document/d/1UeDFioSK6O-dK8RpNESXMsXEV9n_MOUb8yzzYeAuFFc/edit?usp=sharing" target="_blank" class="info-link">Guide and More Info</a>
+
             <a href="https://seculareducationassociation.org/lifewise-launch-process/" target="_blank" class="info-link">What Do These Steps Mean?</a>
             <span class="search-label">Search for your district below!</span>
             
