--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@
             "https://docs.google.com/spreadsheets/d/e/2PACX-1vSaa8gDF6ng1E8YUJ-THYsfHZ4M28y91nGpASy5GHfmfgISsXoP_XmswOEhZeYW8FHVsxzE1gh-Dstf/pub?output=csv",
             "https://docs.google.com/spreadsheets/d/e/2PACX-1vQN6RMquGyImew2ZpR_-k-habAJSR0bgJO58Q3FhSgMaJdavS_QTVJjnnhXyUpRq8_t1QVpnmsFx8ig/pub?output=csv"
         ]},
-        { name: "Step 1", stepNum: 1, desc: "10-50 Signatures", color: "#2E85DB", url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRTzJpeI6tIzbJ2EEs7hXP5AB0y2-Y0xZtvtZQu7Pv55gYrg8vCmwKNZnzam_W4KjY6JxbSM2W0E4Tj/pub?output=csv" },
+        { name: "Step 1", stepNum: 1, desc: "10-50 Signatures", color: "#2E85DB", urls: [
+			"https://docs.google.com/spreadsheets/d/e/2PACX-1vRzH9R_Hv6YkKDtOvk15NHGyWCYSwKHkzAyWQZ9iCACfYUi630v8jstDIkjB9vk5ELk9YZwiJoySerR/pub?output=csv",
+			"https://docs.google.com/spreadsheets/d/e/2PACX-1vQxbOqUHXrell7mGzMptD4xq2V8P1OuNb4dA8GPDhDmWUv2iy7XpQ9U06u6H-APyo_KaWNmDSeO4xxN/pub?output=csv"
+		]},
         { name: "Step 2", stepNum: 2, desc: "Kickoff Meeting", color: "#ACDBB0", url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vRTnYrjWo0CCwhgbPCqHMCOE4td62A9zdq97d6zkDNlFaSSC0je1ID5qCfZ0gUxly_FeDg06NYbjBhH/pub?output=csv" },
         { name: "Step 3", stepNum: 3, desc: "Raise $500", color: "#25DB20", url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vR5F0lL2gP5fujfLazuAAu6-HyTTdH_APQ53BXOygvz5QxZUbPmibFCLVZkLqTmj1bp1dDy5X7hJ-se/pub?output=csv" },
         { name: "Step 4", stepNum: 4, desc: "Form Committee", color: "#00FFA0", url: "https://docs.google.com/spreadsheets/d/e/2PACX-1vQj-xjmLdJ9Uemt4tdbtbr75QNZVp5C19dYNiKkocutLxA4oHjeiwYjVNoDrXS278WWGKITZ0mCWzDw/pub?output=csv" },
