--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="button-grid">
                 <a href="https://docs.google.com/document/d/1UeDFioSK6O-dK8RpNESXMsXEV9n_MOUb8yzzYeAuFFc/edit?usp=sharing" target="_blank" class="info-link">Map Guide & Info</a>
                 <a href="https://seculareducationassociation.org/lifewise-launch-process/" target="_blank" class="info-link">Step Meanings</a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScpde8uK7FeoVGkDHnKFcphyPDKLUFnqKBCfilq3lV-B1-SGQ/viewform?usp=sharing&ouid=100332069196963156291" target="_blank" class="info-link">Submit Info</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScpde8uK7FeoVGkDHnKFcphyPDKLUFnqKBCfilq3lV-B1-SGQ/viewform?usp=header" target="_blank" class="info-link">Submit Info</a>
                 <button id="btnFocusSearch" class="info-link">Search Districts</button>
             </div>
             
